--- a/Changed/Stalker2/Content/GameLite/GameData/ItemGeneratorPrototypes/DynamicItemGenerator.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/ItemGeneratorPrototypes/DynamicItemGenerator.cfg
@@ -119,6 +119,12 @@ GeneralNPC_Consumables : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[5] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 1
+               MaxCount = 1
+            struct.end
          struct.end
       struct.end
       [*] : struct.begin
@@ -147,6 +153,12 @@ GeneralNPC_Consumables : struct.begin
                ItemPrototypeSID = Medkit
                Chance = 1.0
                MinCount = 1
+               MaxCount = 1
+            struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.5
+               MinCount = 0
                MaxCount = 1
             struct.end
             [5] : struct.begin
@@ -196,6 +208,12 @@ GeneralNPC_Consumables_Recon : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 1
+               MaxCount = 1
+			struct.end
          struct.end
       struct.end
       [*] : struct.begin
@@ -344,6 +362,12 @@ GeneralNPC_Consumables_CloseCombat : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 1
+               MaxCount = 1
+			struct.end
          struct.end
       struct.end
       [*] : struct.begin
@@ -371,6 +395,12 @@ GeneralNPC_Consumables_CloseCombat : struct.begin
             [3] : struct.begin
                ItemPrototypeSID = Beer
                Chance = 1
+               MinCount = 1
+               MaxCount = 2
+			struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
                MinCount = 1
                MaxCount = 2
             struct.end
@@ -402,6 +432,12 @@ GeneralNPC_Consumables_Sniper : struct.begin
                Chance = 0.2
                MinCount = 1
                MaxCount = 1
+            struct.end
+			[3] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.5
+               MinCount = 1
+               MaxCount = 2
             struct.end
          struct.end
       struct.end
@@ -438,6 +474,12 @@ GeneralNPC_Consumables_Sniper : struct.begin
                Chance = 1
                MinCount = 1
                MaxCount = 1
+            struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.5
+               MinCount = 1
+               MaxCount = 2
             struct.end
          struct.end
       struct.end
@@ -474,6 +516,12 @@ GeneralNPC_Consumables_Stormtrooper : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 1
+               MaxCount = 1
+            struct.end
          struct.end
       struct.end
       [*] : struct.begin
@@ -510,6 +558,12 @@ GeneralNPC_Consumables_Stormtrooper : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[5] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 1
+               MaxCount = 1
+            struct.end
          struct.end
       struct.end
    struct.end
@@ -537,6 +591,12 @@ GeneralNPC_Consumables_Armored : struct.begin
                ItemPrototypeSID = Vodka
                Chance = 0.1
                MinCount = 1
+               MaxCount = 1
+            struct.end
+			[3] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 0
                MaxCount = 1
             struct.end
          struct.end
@@ -575,6 +635,12 @@ GeneralNPC_Consumables_Armored : struct.begin
                MinCount = 1
                MaxCount = 1
             struct.end
+			[5] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.5
+               MinCount = 0
+               MaxCount = 1
+            struct.end
          struct.end
       struct.end
    struct.end
@@ -602,6 +668,12 @@ GeneralNPC_Consumables_Heavy : struct.begin
                ItemPrototypeSID = Medkit
                Chance = 0.25
                MinCount = 1
+               MaxCount = 1
+            struct.end
+			[4] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
+               MinCount = 0
                MaxCount = 1
             struct.end
          struct.end
@@ -637,6 +709,12 @@ GeneralNPC_Consumables_Heavy : struct.begin
             [4] : struct.begin
                ItemPrototypeSID = AntiRad
                Chance = 0.3
+               MinCount = 1
+               MaxCount = 1
+            struct.end
+			[5] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 0.1
                MinCount = 1
                MaxCount = 1
             struct.end
