--- a/Changed/Stalker2/Content/GameLite/GameData/ItemPrototypes/ConsumablePrototypes.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/ItemPrototypes/ConsumablePrototypes.cfg
@@ -872,3 +872,84 @@ GuitarUsable : struct.begin {refkey=TemplateConsumable}
    ItemGridWidth = 7
    ItemGridHeight = 2
 struct.end
+Energetic_Alco : struct.begin {refkey=TemplateConsumable}
+   SID = Energetic_Alco
+   ConsumableType = EConsumableType::Food
+   UIUseSound = EUISound::UseConsumableEnergetic
+   Icon = Texture2D'/Game/GameLite/FPS_Game/UIRemaster/UITextures/Inventory/Consumable/T_cns_energy_drink_alco.T_cns_energy_drink_alco'
+   Icon1x1 = Texture2D'/Game/GameLite/FPS_Game/UIRemaster/UITextures/Inventory/Consumable/1x1/T_cns_energy_drink_alco_1x1.T_cns_energy_drink_alco_1x1'
+   MeshPrototypeSID = Energetic
+   Weight = 0.3
+   ItemGridHeight = 2
+   MeshPath = SkeletalMesh'/Game/_STALKER2/SkeletalMeshes/item/energetic/fp/SK_energy_drink_fp.SK_energy_drink_fp'
+   AnimBlueprint = AnimBlueprint'/Game/_STALKER2/Animations/item/energetic/fp/AnimBP_Energy.AnimBP_Energy'
+   bIsUsesRightHand = true
+   SortGroup = ESortGroup::Stamina
+   SortPriority = 1
+   Cost = 600.0
+   EffectPrototypeSIDs : struct.begin
+      [0] = WaterSatiety1
+      [1] = EnergeticLimitedStamina
+      [2] = BeerDrunkness
+      [3] = EnergeticsLimitedPoppyFieldSleepiness
+      [4] = EnergeticSleepiness
+      [5] = EnergyDrinkPostProcess
+      [6] = EnergeticStaminaPerAction1
+   struct.end
+   AlternativeEffectPrototypeSIDs : struct.begin
+      [0] = Artifact_WeirdKettle_WaterSatiety
+      [1] = EnergeticLimitedStamina
+      [2] = Artifact_WeirdKettle_BeerDrunkness
+      [3] = EnergeticsPoppyFieldSleepiness
+      [4] = EnergeticSleepiness
+      [5] = EnergyDrinkPostProcess
+      [6] = EnergeticStaminaPerAction1
+   struct.end
+   NegativeEffectPrototypeSIDs : struct.begin
+      [0] : struct.begin
+         Effect = WeirdKettle_NegativeEffect_Drunkness
+         Weight = 1
+      struct.end
+      [1] : struct.begin
+         Effect = WeirdKettle_NegativeEffect_Sleepiness
+         Weight = 1
+      struct.end
+      [2] : struct.begin
+         Effect = ConcussionComposite
+         Weight = 1
+      struct.end
+      [3] : struct.begin
+         Effect = WeirdKettle_NegativeEffect_PSY
+         Weight = 1
+      struct.end
+      [4] : struct.begin
+         Effect = WeirdKettle_NegativeEffect_Satiety
+         Weight = 1
+      struct.end
+      [5] : struct.begin
+         Effect = WeirdKettle_NegativeEffect_Radiation
+         Weight = 1
+      struct.end
+   struct.end
+   NegativeEffectsChance = 0.5
+   ShouldShowEffects : struct.begin
+      [0] = true
+      [1] = false
+      [2] = false
+      [3] = false
+      [4] = false
+      [5] = false
+      [6] = true
+   struct.end
+   EffectsDisplayTypes : struct.begin
+      [0] = EEffectDisplayType::EffectLevel
+      [1] = EEffectDisplayType::EffectLevel
+      [2] = EEffectDisplayType::EffectLevel
+      [3] = EEffectDisplayType::EffectLevel
+      [4] = EEffectDisplayType::EffectLevel
+      [5] = EEffectDisplayType::EffectLevel
+      [6] = EEffectDisplayType::EffectLevel
+   struct.end
+   ItemTypeSwitchValue = AkSwitchValue'/Game/_STALKER2/Audio/WwiseAudio/Switches/Items/ItemType/ItemType-Can.ItemType-Can'
+   PhysicsInteractionPrototypeSID = MetallTinItem
+struct.end
