--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /.idea
 *.ubulk
+Changed/Stalker2/Content/_Stalker_2/Localization/LocalizationDB.json
+Sources/Stalker2/Content/_Stalker_2/Localization/LocalizationDB.json
