--- a/Changed/Stalker2/Content/GameLite/GameData/EffectPrototypes.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/EffectPrototypes.cfg
@@ -22991,3 +22991,39 @@ HerculesWeight_Penalty : struct.begin {refkey=[0]}
    Positive = EBeneficial::Positive
    DuplicationType = EDuplicateResolveType::KeepNew
 struct.end
+EnergeticAlcoStaminaPerAction : struct.begin {refkey=[0]}
+   SID = EnergeticAlcoStaminaPerAction
+   Text = Decreased Stamina Per action
+   LocalizationSID = general_costStamina
+   Icon = Texture2D'/Game/GameLite/FPS_Game/UIRemaster/UITextures/Inventory/Effects/Texture_Icon_EnergyRegen.Texture_Icon_EnergyRegen'
+   Duration = 120.0
+   Type = EEffectType::SPDrain
+   DuplicationType = EDuplicateResolveType::KeepAll
+   ValueMin = -10%
+   ValueMax = -10%
+   Positive = EBeneficial::Positive
+   AffectedStaminaActionTypes : struct.begin
+      [0] = EStaminaAction::Walk
+      [1] = EStaminaAction::Run
+      [2] = EStaminaAction::Sprint
+      [3] = EStaminaAction::Jump
+      [4] = EStaminaAction::Vault
+      [5] = EStaminaAction::MeleeNormal
+      [6] = EStaminaAction::MeleeStrong
+      [7] = EStaminaAction::MeleeButstock
+   struct.end
+   ShouldPauseByDialog = false
+struct.end
+EnergeticLimitedStamina : struct.begin {refkey=EnergeticLimitedStamina}
+   SID = EnergeticAlcoStamina
+   Duration = 120.0
+   ValueMin = 300%
+   ValueMax = 300%
+struct.end
+EnergeticAlcoDrunkness : struct.begin {refkey=VodkaDrunkness}
+   SID = EnergeticAlcoDrunkness
+   Duration = 120
+   Charges = 50
+   ValueMin = 60
+   ValueMax = 160
+struct.end
