--- a/Changed/Stalker2/Content/GameLite/GameData/ItemGeneratorPrototypes/StalkeRevoDynamicItemGenerator.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/ItemGeneratorPrototypes/StalkeRevoDynamicItemGenerator.cfg
@@ -62,5 +62,20 @@ GeneralNPC_Mercenaries_Stormtrooper : struct.begin {refurl=DynamicItemGenerator.
       struct.end
    struct.end
 struct.end
-
+RostokArenaBartender_TradeItemGenerator : struct.begin {refurl=DynamicItemGenerator.cfg;refkey=RostokArenaBartender_TradeItemGenerator}
+   ItemGenerator : struct.begin
+      Consumable : struct.begin
+         Category = EItemGenerationCategory::Consumable
+		 bAllowSameCategoryGeneration = true
+         PossibleItems : struct.begin
+            [0] : struct.begin
+               ItemPrototypeSID = Energetic_Alco
+               Chance = 1
+               MinCount = 1
+               MaxCount = 2
+            struct.end
+         struct.end
+      struct.end
+   struct.end
+struct.end
 
