--- a/Changed/Stalker2/Content/GameLite/GameData/ItemPrototypes/StalkeRevoConsumablePrototypes.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/ItemPrototypes/StalkeRevoConsumablePrototypes.cfg
@@ -18,20 +18,12 @@
 	  [1] = EnergeticAlcoStamina
       [2] = EnergeticAlcoStaminaPerAction 
       [3] = BeerAntirad1
-      [4] = EnergeticsPoppyFieldSleepiness
-      [5] = EnergeticSleepiness
-      [6] = EnergeticAlcoDrunkness
-	  [7] = DrunknessPostProcess
    struct.end
    AlternativeEffectPrototypeSIDs : struct.begin
       [0] = Artifact_WeirdKettle_EnegeticSatiety
-      [1] = EnergeticAlcoStamina
-      [2] = EnergeticStaminaPerAction1
+      [1] = Artifact_WeirdKettle_EnergeticStamina
+      [2] = EnergeticAlcoStaminaPerAction
       [3] = Artifact_WeirdKettle_BeerAntirad
-      [4] = EnergeticsPoppyFieldSleepiness
-      [5] = EnergeticSleepiness
-      [6] = Artifact_WeirdKettle_BeerDrunkness
-      [7] = DrunknessPostProcess
    struct.end
    NegativeEffectPrototypeSIDs : struct.begin
       [0] : struct.begin
@@ -63,22 +55,14 @@
    ShouldShowEffects : struct.begin
       [0] = true 
       [1] = true
-      [2] = false
+      [2] = true
       [3] = true
-      [4] = false
-      [5] = false
-      [6] = false
-      [7] = false
    struct.end
    EffectsDisplayTypes : struct.begin
-      [0] = EEffectDisplayType::EffectLevel
-      [1] = EEffectDisplayType::EffectLevel
-      [2] = EEffectDisplayType::EffectLevel
-      [3] = EEffectDisplayType::EffectLevel
-      [4] = EEffectDisplayType::EffectLevel
-      [5] = EEffectDisplayType::EffectLevel
-      [6] = EEffectDisplayType::EffectLevel
-	  [7] = EEffectDisplayType::EffectLevel
+      [0] = EEffectDisplayType::Value
+      [1] = EEffectDisplayType::ValueAndTime
+      [2] = EEffectDisplayType::Value
+      [3] = EEffectDisplayType::Value
    struct.end
    ItemTypeSwitchValue = AkSwitchValue'/Game/_STALKER2/Audio/WwiseAudio/Switches/Items/ItemType/ItemType-Can.ItemType-Can'
    PhysicsInteractionPrototypeSID = MetallTinItem
