--- a/Changed/Stalker2/Content/GameLite/GameData/StalkeRevoEffectPrototypes.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/StalkeRevoEffectPrototypes.cfg
@@ -1,35 +1,9 @@
-﻿EnergeticAlcoStaminaPerAction : struct.begin {refurl=EffectPrototypes.cfg;refkey=[0]}
-   SID = EnergeticAlcoStaminaPerAction
-   Text = Decreased Stamina Per action
-   LocalizationSID = general_costStamina
-   Icon = Texture2D'/Game/GameLite/FPS_Game/UIRemaster/UITextures/Inventory/Effects/Texture_Icon_EnergyRegen.Texture_Icon_EnergyRegen'
+﻿EnergeticAlcoStaminaPerAction : struct.begin {refurl=EffectPrototypes.cfg;refkey=EnergeticLimitedStamina}
    Duration = 120.0
-   Type = EEffectType::SPDrain
-   DuplicationType = EDuplicateResolveType::KeepAll
-   ValueMin = -10%
-   ValueMax = -10%
-   Positive = EBeneficial::Positive
-   AffectedStaminaActionTypes : struct.begin
-      [0] = EStaminaAction::Walk
-      [1] = EStaminaAction::Run
-      [2] = EStaminaAction::Sprint
-      [3] = EStaminaAction::Jump
-      [4] = EStaminaAction::Vault
-      [5] = EStaminaAction::MeleeNormal
-      [6] = EStaminaAction::MeleeStrong
-      [7] = EStaminaAction::MeleeButstock
-   struct.end
-   ShouldPauseByDialog = false
 struct.end
-EnergeticAlcoStamina : struct.begin {refurl=EffectPrototypes.cfg;refkey=[0]}
+EnergeticAlcoStamina : struct.begin {refurl=EffectPrototypes.cfg;refkey=EnergeticLimitedStamina}
    SID = EnergeticAlcoStamina
-   Text = Regen Stamina
-   LocalizationSID = increase_stamina_regen
-   Icon = Texture2D'/Game/GameLite/FPS_Game/UIRemaster/UITextures/Inventory/Effects/Texture_Icon_EnergyRegen.Texture_Icon_EnergyRegen'
    Duration = 120.0
-   Type = EEffectType::RegenStamina
    ValueMin = 300%
    ValueMax = 300%
-   Positive = EBeneficial::Positive
-   ShouldPauseByDialog = false
 struct.end
