--- a/Changed/Stalker2/Content/GameLite/GameData/StalkeRevoEffectPrototypes.cfg
+++ b/Changed/Stalker2/Content/GameLite/GameData/StalkeRevoEffectPrototypes.cfg
@@ -1,4 +1,5 @@
-﻿EnergeticAlcoStaminaPerAction : struct.begin {refurl=EffectPrototypes.cfg;refkey=EnergeticLimitedStamina}
+﻿/// Currently can't be imported into cfg. So must be overrided in cfg itself.
+EnergeticAlcoStaminaPerAction : struct.begin {refurl=EffectPrototypes.cfg;refkey=EnergeticLimitedStamina}
    Duration = 120.0
 struct.end
 EnergeticAlcoStamina : struct.begin {refurl=EffectPrototypes.cfg;refkey=EnergeticLimitedStamina}
